# libricola

./: Cargo.toml  index.html
migrations/: 0001_first_migration.sql
settings/: base.yaml  development.yaml  production.yaml
src/: app_state.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: author.rs  db.rs  mod.rs  request_objects.rs  text.rs  text_types.rs
src/fixtures/: author_fixture.rs  authors.rs  mod.rs  text_fixture.rs  text_type_fixture.rs  texts.rs
src/get/: get_endpoints.rs  get_helpers.rs  mod.rs
src/post/: mod.rs  post_endpoints.rs
src/routes/: get_endpoints.rs  get_helpers.rs  mod.rs  post_endpoints.rs
src/services/: get.rs  post.rs
