[package]
name = "libricola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "json"] }
serde = "1.0.197"
actix = "0.13.3"
actix-web = "4.5.1"
dotenv = "0.15.0"
serde_json = "1.0.115"
env_logger = "0.11.3"
actix-files = "0.6.5"
config = { version = "0.14.0", features = ["yaml"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
